--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.545.0",
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-helmet": "^6.1.0",
@@ -46,6 +47,9 @@
     ]
   },
   "devDependencies": {
-    "jest": "^27.5.1"
+    "autoprefixer": "^10.4.22",
+    "jest": "^27.5.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18"
   }
 }
